<resources>
    <string name="app_name">Referee</string>

    <string name="hello_world">Willkommen zur Referee App</string>
    <string name="action_settings">Settings</string>
    <string name="create_game">Spiel erstellen</string>
    <string name="options">Team erstellen</string>
    <string name="quit_app"> </string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="create_team">Mannschaft erstellen</string>
    <string name="spiel_erstellen">Spiel erstellen</string>
    <string name="date_select">Datum auswählen</string>
    <string name="spinner_title">Mannschaft</string>

    <string name="from_date">Datum</string>
    <string name="to_date">Zeit</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_run_game">RunGame</string>
    <string name="title_activity_send">SendActivity</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


</resources>
